<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp">

        <ImageView
            android:layout_width="113dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_wb_sunny_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="Clear"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="30 C" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="Feels Like: 28 C" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginBottom="15sp">
            <ImageView
                        android:layout_width="80sp"
                        android:layout_height="80sp"
                        android:src="@drawable/ic_baseline_vertical_align_bottom_24"
                        android:padding="5sp">
            </ImageView>
            <View
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:background="@android:color/black"/>
            <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5sp"
                            android:text="@string/pressure"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:padding="2sp">
                        </TextView>
                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="250Hpa"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:gravity="center"

                            android:padding="2sp">

                        </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginLeft="50dp">

            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:src="@drawable/ic_baseline_360_24">

            </ImageView>
            <View
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:background="@android:color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/wind"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingBottom="2sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2sp"
                    android:text="35m/s"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginBottom="15sp">
            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:src="@drawable/ic_baseline_arrow_downward_24"
                android:padding="5sp">
            </ImageView>
            <View
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:background="@android:color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/sunset"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:padding="2sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2sp"
                    android:text="250Hpa"
                    android:textSize="18sp"

                    android:textStyle="bold">

                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_baseline_360_24">
            </ImageView>
            <View
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:background="@android:color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/sunrise"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingBottom="2sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2sp"
                    android:text="35m/s"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginBottom="15sp">

            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:padding="5sp"
                android:src="@drawable/ic_baseline_cloud_24"></ImageView>
            <View
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:background="@android:color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/clouds"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:padding="2sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2sp"
                    android:text="250Hpa"
                    android:textSize="18sp"

                    android:textStyle="bold">

                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp">

            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:src="@drawable/ic_humidity">

            </ImageView>
            <View
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:background="@android:color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:gravity="center"
                    android:text="@string/humidity"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingBottom="2sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2sp"
                    android:text="35m/s"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginBottom="15sp">
            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:src="@drawable/ic_baseline_arrow_downward_24"
                android:padding="5sp">
            </ImageView>
            <View
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:background="@android:color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:text="@string/pressure"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:padding="2sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2sp"
                    android:text="250Hpa"
                    android:textSize="18sp"

                    android:textStyle="bold">

                </TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp">

            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:src="@drawable/ic_baseline_360_24">

            </ImageView>
            <View
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:background="@android:color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:gravity="center"
                    android:text="Wind"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingBottom="2sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2sp"
                    android:text="35m/s"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>




</LinearLayout>